@@ -1,10 +1,0 @@
-depth = ../..
-
-STEPMAKE_TEMPLATES=documentation texinfo tex
-LOCALSTEPMAKE_TEMPLATES=lilypond ly lysdoc 
-EXTRA_DIST_FILES=README
-
-include $(depth)/make/stepmake.make
-
-TITLE=LilyPond Assorted Possible Bugs
-
