@@ -1,11 +1,0 @@
-# mutopia/Makefile
-
-depth = ..
-
-SUBDIRS = J.S.Bach F.Schubert E.Satie 
-EXTRA_DIST_FILES += claop.py
-
-LOCALSTEPMAKE_TEMPLATES=ly mutopia
-
-include $(depth)/make/stepmake.make 
-
